# MLZoomcamp2025

./: .gitignore  desktop.ini
1. Intro/: 1.9 Introduction to Pandas.ipynb  Homework1.ipynb
1. Intro/.ipynb_checkpoints/: 1.7 Introduction to Numpy-checkpoint.ipynb  1.8 Linear Algebra Refresher-checkpoint.ipynb  Homework1(remake)-checkpoint.ipynb
10. Kubernetes/Workshop/: app.py  load_test.py  pyproject.toml
11. Capstone Project/: Dockerfile  README.md  animal_classifier_mobilenet_v2.onnx  marketing.py  notebookwithCNN.ipynb  predict.py  pyproject.toml  requirements.txt  train.py
11. Capstone Project/.ipynb_checkpoints/: notebookOtherModel-checkpoint.ipynb
11. Capstone Project/data/: subset.ipynb
11. Capstone Project/k8s/: deployment.yaml  service.yaml
2. Regression/: Car Price Project.ipynb  Homework2.ipynb
3. Classification/: Churn Prediction Project.ipynb
4. Evaluation/: Evaluation Metrics for Classification.ipynb  Homework W4.ipynb
5. Deployment/: Deployment Model.ipynb  Dockerfile  fly.toml  marketing.py  ping.py  pyproject.toml  serve.py
5. Deployment/.ipynb_checkpoints/: Deployment Model-checkpoint.py  marketing-checkpoint.py  predict-checkpoint.py  train-checkpoint.py
5. Deployment/Homework 5/: Dockerfile  predict.py  test.py  train.py
6. Tree/: Credit Risk Scoring Project.ipynb
7. Midterm Project/: README.md  fly.toml  marketing.py  notebook.ipynb  predict.py  pyproject.toml  train.py
8. Deep Learning/: HW8.ipynb  PyTorch_ML_Workshop.ipynb
More on Deployment/: Churn Rate.ipynb  script.py  test-V-1.csv  train-V-1.csv
(+25 files in other folders)
