[project]
name = "5-deployment"
version = "0.1.0"
description = "Churn prediction service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.0",
    "pandas>=2.3.3",
    "scikit-learn==1.6.1",
    "uv>=0.9.5",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]

[tool.uv.workspace]
members = [
    "Homework 5",
]
